fix card image on narrow

--- a/css/style.css
+++ b/css/style.css
@@ -7257,7 +7257,7 @@ button.close {
     display: none !important; } }
 /* line 1, ../scss/_crop_cards.scss */
 .card-crop {
-  height: 450px; }
+  height: 350px; }
   /* line 4, ../scss/_crop_cards.scss */
   .card-crop .card-text {
     padding: 5px; }
@@ -7267,8 +7267,8 @@ button.close {
 
 /* line 12, ../scss/_crop_cards.scss */
 .card-img-top {
-  width: 100%;
-  height: 15vw;
+  max-width: 100%;
+  max-height: 70%;
   object-fit: cover; }
 
 /* line 18, ../scss/_crop_cards.scss */
