--- a/scss/_crop_cards.scss
+++ b/scss/_crop_cards.scss
@@ -1,5 +1,5 @@
 .card-crop {
-  height: 450px;
+  height: 350px;
 
   .card-text {
     padding: 5px;
@@ -10,8 +10,8 @@
 }
 
 .card-img-top {
-  width: 100%;
-  height: 15vw;
+  max-width: 100%;
+  max-height: 70%;
   object-fit: cover;
 }
 
